--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3",
-    "nodemon": "^2.0.12",
     "html2json": "^1.0.2",
-    "tinymce": "^5.7.1",
-    "socket.io": "^4.1.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.8",
+    "nodemon": "^2.0.12",
+    "socket.io": "^4.1.3",
+    "tinymce": "^5.7.1"
   },
   "description": ""
 }
